tests/machine/x/python/cross_join_triple.py
# Generated by Mochi Python compiler
from __future__ import annotations
import dataclasses


@dataclasses.dataclass
class Auto1:
    n: int
    l: str
    b: bool


nums = [1, 2]
letters = ["A", "B"]
bools = [True, False]
combos = [Auto1(n=n, l=l, b=b) for n in nums for l in letters for b in bools]
print("--- Cross Join of three lists ---")
for c in combos:
    print(c["n"], c["l"], c["b"])
